fix(all): fix overflow issues in address book and staking sections

--- a/apps/browser-extension-wallet/src/views/browser-view/components/Layout/Layout.module.scss
+++ b/apps/browser-extension-wallet/src/views/browser-view/components/Layout/Layout.module.scss
@@ -94,10 +94,8 @@ $main-gap: 49px;
   }
 
   @media (max-width: $breakpoint-minimum) {
-    overflow-x: scroll;
     justify-content: start;
     margin-right: 0;
-    padding-right: size_unit(4);
     @include scroll-bar-style;
   }
 
